update quarkus version 2.16.6