@@ -57,18 +57,19 @@ group 'com.splio'
 version '1.0.0-SNAPSHOT'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_19
+    targetCompatibility = JavaVersion.VERSION_19
 }
 
 compileJava {
     options.encoding = 'UTF-8'
     options.compilerArgs << '-parameters'
-}
+    options.compilerArgs.addAll(['--enable-preview'])}
 
 compileTestJava {
     options.encoding = 'UTF-8'
-}
+    options.compilerArgs << '-parameters'
+    options.compilerArgs.addAll(['--enable-preview'])}
 
 test {
     finalizedBy jacocoTestReport // report is always generated after tests run
